added connection between conten js and background js and socket connection to test server

--- a/extension/poopycorn/manifest.json
+++ b/extension/poopycorn/manifest.json
@@ -18,8 +18,8 @@
     "default_popup": "popup/poopy.html"
   },
 
-  "web_accessible_resources": [
-    "/content_scripts/jquery-3.2.1.js"
-  ]
 
+  "background": {
+    "scripts": [ "socket.io.min.js", "background.js"]
+  }
 }
