added visualization function and included images

--- a/extension/poopycorn/manifest.json
+++ b/extension/poopycorn/manifest.json
@@ -21,5 +21,12 @@
 
   "background": {
     "scripts": [ "socket.io.min.js", "background.js"]
-  }
+  },
+
+  "web_accessible_resources": [
+    "images/Poop-o-meter.png",
+    "images/Poopicorn_48px.png"
+  ]
+
+
 }
